--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,10 @@
             "email": "padraic.brady@gmail.com"
         }
     ],
-
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": "^7.2",
-        "jetbrains/phpstorm-stubs": "dev-master",
         "nikic/php-parser": "^4.0",
         "ocramius/package-versions": "^1.1",
         "symfony/console": "^3.2 || ^4.0",
@@ -31,13 +29,15 @@
     "require-dev": {
         "bamarni/composer-bin-plugin": "^1.1",
         "humbug/box": "^3.8",
+        "jetbrains/phpstorm-stubs": "dev-master",
         "phpunit/phpunit": "^8.0"
     },
     "replace": {
         "humbug/php-scoper": "self.version"
     },
-
-    "bin": ["bin/php-scoper"],
+    "bin": [
+        "bin/php-scoper"
+    ],
     "autoload": {
         "files": [
             "src/functions.php",
@@ -56,7 +56,6 @@
             "Humbug\\PhpScoper\\": "tests/"
         }
     },
-
     "config": {
         "bin-dir": "bin",
         "sort-packages": true,
